Project project_name {
  database_type: 'MySQL'
  Note: 'Description of the project'
}

Table participant {
    id int [pk, increment]
    name varchar [not null]
    email varchar [not null]
    competition_id int [not null]
    sheet_id varchar [not null]
    paid bit 
    created_at timestamp [not null, default: `now()`]

    indexes {
        (email, competition_id) [unique]
    }
}

Table competition {
    id int [pk, increment]
    name varchar [not null]
    description varchar [not null]
    entry_fee int [not null]
}

Ref: competition.id < participant.competition_id

Table match_prediction {
    id int [pk, increment]
    home_score int [not null]
    away_score int [not null]
    match_id int [not null]
    match_result int 
    phase int [not null]
    participant_id int [not null]

    indexes {
        match_id [name: 'match_id_index']
        participant_id [name: 'participant_id_index']
        (match_id, participant_id) [unique]
    }
}

Ref: participant.id < match_prediction.participant_id

Table team_prediction {
    id int [pk, increment]
    team varchar [not null]
    stage varchar [not null]
    group_order int 
    phase int [not null]
    participant_id int [not null]
}

Ref: participant.id < team_prediction.participant_id

Table fixtures {
    id int [pk, increment]
    home_team varchar [not null]
    away_team varchar [not null]
    kickoff timestamp [not null]
    livescore_id int [not null]
    stage varchar [not null]

    indexes {
        livescore_id [unique, name: 'livescore_id_index']
    }
}

Ref: fixtures.id < match_prediction.match_id

Table score {
    id int [pk, increment]
    home_score int [not null]
    away_score int [not null]
    match_id int [not null]
    source varchar

    indexes {
        match_id [unique, name: 'match_id_index']
    }
}

Ref: fixtures.id - score.match_id
